--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: linear-gradient(to bottom, #a8e063, #56ab2f);
+  /* background: linear-gradient(to bottom, #a8e063, #56ab2f); */
 }
 
 .login-container {
