--- a/src/components/Chat/Chatsection.css
+++ b/src/components/Chat/Chatsection.css
@@ -64,12 +64,12 @@
   width: 23%;
 }
 
-.logo-img-chat {
+/* .logo-img-chat {
   width: 12%;
   height: 30px;
   border-radius: 67px;
   border: 3px solid #fff;
-}
+} */
 
 .logo-img {
   width: 15%;
