--- a/src/components/Chat/chat.css
+++ b/src/components/Chat/chat.css
@@ -114,7 +114,7 @@
     height: 2.5rem;
     border: none;
     border-radius: 0px;
-    padding: 16px 45px;
+    padding: 4px 45px;
     display: flex;
     align-items: center;
     gap: 15px;
@@ -122,6 +122,7 @@
     justify-content: center;
     align-content: center;
     flex-direction: row;
+    height: 61px;
 }
 
 .input {
