--- a/src/components/Chat/Chatsection.css
+++ b/src/components/Chat/Chatsection.css
@@ -588,3 +588,20 @@ cursor: pointer;
 height: 336px !important;
 width: 100% !important;
 }
+.loader {
+  display: flex;
+  animation: fadeOut 2s forwards;
+}
+
+.dot {
+  fill: grey;
+  animation: dotPulse 1.4s infinite ease-in-out;
+}
+
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
