--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -56,7 +56,7 @@
     justify-content: center;
     align-items: center;
     gap: 100px;
-    background-image: url("../../assets/bgp.webp");
+    /* background-image: url("../../assets/bgp.webp"); */
 }
 
 .logger-noti-div {
@@ -220,7 +220,7 @@
     width: 31%;
     align-items: center;
     height: 67px;
-    padding-left: 4%;
+    padding-left: 7%;
 }
 
 
@@ -239,10 +239,15 @@
 
 .title-div {
     font-family: "Poppins", sans-serif;
-    width: 55%;
+    width: 59% !important;
     color: black;
     font-weight: 500;
     font-size: larger;
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 7%;
 }
 
 .button-text-container {
@@ -441,7 +446,7 @@
 }
 .title-div {
     font-family: "Poppins", sans-serif;
-    width: 100% !important;
+    /* width: 100% !important; */
     color: black;
     font-weight: 500;
     font-size: larger;
