--- a/src/components/Video Call Room/Video Metting Screen/style.css
+++ b/src/components/Video Call Room/Video Metting Screen/style.css
@@ -169,13 +169,6 @@
     border: none;
 }
 
-.active {
-    width: 150px;
-    height: 40px;
-    border: 3px solid #d4e5d2;
-    background-color: white;
-}
-
 .chat-body {
     flex: 1 1;
     padding: 10px;
@@ -589,13 +582,6 @@
     height: 40px;
     background-color: #d4e5d2;
     border: none;
-}
-
-.active {
-    width: 150px;
-    height: 40px;
-    border: 3px solid #d4e5d2;
-    background-color: white;
 }
 
 .empty {
@@ -1062,6 +1048,46 @@
     gap: 10px;
     padding: 10px;
     border-radius: 100px;
+    position: relative;
+}
+
+#vc_participant_control_chil_popup {
+    background: rgb(40, 40, 40);
+    border-radius: 12px;
+    position: absolute;
+    bottom: 70px;
+    right: 0px;
+    padding: 7px;
+    z-index: 1000;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#vc_participant_control_chil_popup.active {
+    background: rgb(40, 40, 40);
+    border-radius: 12px;
+    position: absolute;
+    bottom: 70px;
+    right: 0px;
+    padding: 7px;
+    z-index: 1000;
+    visibility: visible;
+    opacity: 1;
+}
+
+.vc_participant_control_chil_popu_item {
+    height: 35px;
+    border-radius: 8px;
+    color: rgb(200, 200, 200);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0px 14px;
+    cursor: pointer;
+}
+
+.vc_participant_control_chil_popu_item:hover {
+    background: rgb(50, 50, 50);
 }
 
 .vc_participant_control_btns {
