--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
 * {
     box-sizing: border-box;
+    font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, Segoe UI Variable Display, Segoe UI, Helvetica, Apple Color Emoji, Arial, sans-serif, Segoe UI Emoji, Segoe UI Symbol;
 }
