--- a/src/components/Video Call Room/Video Metting Screen/style.css
+++ b/src/components/Video Call Room/Video Metting Screen/style.css
@@ -629,20 +629,29 @@
 .chat_and_participants_foot_master {
     display: flex;
     padding: 10px;
-    flex-direction: row;
-    align-items: center;
     margin-top: auto;
 }
 
+.chat_and_participants_foot_child {
+    display: flex;
+    flex-direction: row;
+    background: rgb(241, 243, 244);
+    align-items: center;
+    border-radius: 100px;
+    width: 100%;
+}
+
 .chat_and_participants_foot_input {
-    border: 1px solid rgb(200, 200, 200);
+    /* border: 1px solid rgb(200, 200, 200); */
     width: 100%;
     height: 40px;
     border-radius: 10px;
-    padding-left: 10px;
+    padding-left: 15px;
     outline: none;
     width: 100%;
+    background: none;
     font-size: 14px;
+    border: none;
 }
 
 .chat-footer-search-text-send {
@@ -652,21 +661,22 @@
     min-width: 40px;
     min-height: 40px;
     border-radius: 100px;
-    background-color: rgb(0, 132, 0);
+    /* background-color: rgb(0, 132, 0); */
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 7px;
     border: none;
     outline: none;
+    background: none;
     /* position: absolute;
     right: 40px;
     padding-top: 10px; */
 }
 
 .chat-footer-search-text-sen-icon {
-    color: white;
+    color: rgb(50, 50, 50);
     font-size: 20px;
+    opacity: 0.5;
     min-width: 20px;
 }
 
@@ -682,10 +692,34 @@
     margin-left: auto;
 }
 
-#vc_head_copy_icon {
-    font-size: 16px;
-    min-width: 16px;
-    color: white;
+#vc_footer_bots {
+    position: absolute;
+    right: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.vc_head_bot_btn_ico_master {
+    border-radius: 100px;
+    width: 40px !important;
+    min-width: 40px !important;
+    height: 40px !important;
+    min-height: 40px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.vc_head_bot_btn_ico_master:hover {
+    background: rgb(240, 240, 240);
+}
+
+.vc_head_bot_btn_icon {
+    font-size: 20px;
+    min-width: 20px;
+    color: black;
 }
 
 #vc_header_master {
@@ -708,23 +742,59 @@
     width: auto;
 }
 
-.chat_and_participants_master {
+#chat_and_participants_master {
     width: 300px;
     border-left: 1px solid rgba(0, 0, 0, 0.1);
-    height: calc(100vh - 56px);
-    top: 56px;
-    right: 0;
+    height: calc(100vh - 88px);
+    top: 20px;
+    right: -300px;
     position: fixed;
     display: flex;
     flex-direction: column;
     background: white;
     z-index: 10000;
     overflow: hidden;
+    border-radius: 10px;
+    transition: 0.3s;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-.vc_participants_master {
-    top: 56px;
-    width: calc(100% - 300px);
+#chat_and_participants_master.active {
+    width: 300px;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    height: calc(100vh - 88px);
+    top: 20px;
+    right: 20px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    background: white;
+    z-index: 10000;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: 0.3s;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+#vc_participants_master {
+    top: 0px;
+    width: 100%;
+    /* width: calc(100% - 300px); */
+    position: absolute;
+    padding: 20px 150px;
+    display: grid;
+    height: auto;
+    min-height: calc(100% - 56px);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding-bottom: 86px;
+    transition: 0.3s;
+}
+
+#vc_participants_master.active {
+    top: 0px;
+    /* width: 100%; */
+    width: calc(100% - 320px);
     position: absolute;
     padding: 20px;
     display: grid;
@@ -733,14 +803,15 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding-bottom: 86px;
+    transition: 0.3s;
 }
 
-.vc_participants_master:has(.vc_participants_item:nth-child(1):last-child) {
+#vc_participants_master:has(.vc_participants_item:nth-child(1):last-child) {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
 }
 
-.vc_participants_master:has(.vc_participants_item:nth-child(2):last-child) {
+#vc_participants_master:has(.vc_participants_item:nth-child(2):last-child) {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
 }
@@ -762,7 +833,7 @@
 
 .vc_participants_item {
     width: 100%;
-    aspect-ratio: 4/3;
+    aspect-ratio: 9/5;
     background: #d4e5d2;
     display: flex;
     justify-content: center;
@@ -811,13 +882,13 @@
 }
 
 .chat_and_participants_btn_child {
-    border-radius: 100px;
+    border-radius: 7px;
     display: flex;
     flex-direction: row;
     width: 100%;
-    gap: 4px;
+    background-color: rgb(244, 244, 245);
     padding: 4px;
-    background-color: #d4e5d2;
+    box-shadow: rgba(9, 9, 11, 0.05) 0px 2px 4px 0px inset;
 }
 
 .chat_and_participants_btn_chil_item {
@@ -825,6 +896,7 @@
     font-size: 14px;
     height: 28px;
     width: 100%;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1030,64 +1102,72 @@
 
 .vc_participant_controls {
     position: fixed;
-    bottom: 10px;
+    bottom: 0px;
     left: 0;
-    width: calc(100% - 300px);
+    width: 100%;
     z-index: 1000;
+    padding: 10px 0px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: white;
 }
 
 .vc_participant_control_child {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: rgb(40, 40, 40);
+    /* background: rgb(40, 40, 40); */
     width: fit-content;
     gap: 10px;
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 100px;
     position: relative;
 }
 
 #vc_participant_control_chil_popup {
-    background: rgb(40, 40, 40);
-    border-radius: 12px;
+    background: white;
+    border-radius: 7px;
     position: absolute;
-    bottom: 70px;
-    right: 0px;
+    bottom: 55px;
+    right: -15px;
     padding: 7px;
     z-index: 1000;
     visibility: hidden;
     opacity: 0;
+    transition: 0.2s;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 #vc_participant_control_chil_popup.active {
-    background: rgb(40, 40, 40);
-    border-radius: 12px;
+    background: white;
+    border-radius: 7px;
     position: absolute;
-    bottom: 70px;
-    right: 0px;
+    bottom: 55px;
+    right: -15px;
     padding: 7px;
     z-index: 1000;
     visibility: visible;
     opacity: 1;
+    transition: 0.2s;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .vc_participant_control_chil_popu_item {
     height: 35px;
-    border-radius: 8px;
-    color: rgb(200, 200, 200);
+    border-radius: 5px;
+    color: black;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     padding: 0px 14px;
+    font-size: 14px;
+    font-weight: 500;
     cursor: pointer;
 }
 
 .vc_participant_control_chil_popu_item:hover {
-    background: rgb(50, 50, 50);
+    background: rgb(240, 240, 240);
 }
 
 .vc_participant_control_btns {
@@ -1101,16 +1181,18 @@
     outline: none;
     border: none;
     background: none;
+    /* background: rgb(90, 90, 90); */
+    box-shadow: var(--box-shadow-btn);
 }
 
 .vc_participant_control_btns:hover {
-    background: rgb(50, 50, 50);
+    box-shadow: var(--box-shadow-btn-hover);
 }
 
 .vc_participant_control_btn_icon {
-    width: 24px;
-    font-size: 24px;
-    color: rgb(200, 200, 200);
+    width: 22px;
+    font-size: 22px;
+    color: rgb(70, 70, 70);
 }
 
 .vc_participants_ite_name {
