--- a/src/components/Chat/Chatsection.css
+++ b/src/components/Chat/Chatsection.css
@@ -605,3 +605,10 @@ width: 100% !important;
 .dot:nth-child(3) {
   animation-delay: 0.4s;
 }
+.epr_-6npj90{
+  height: 450px;
+  width: 339px;
+  position: absolute;
+  bottom: -3px;
+  right: 195px;
+}
